--- a/style.css
+++ b/style.css
@@ -1,97 +1,47 @@
-* {
+*,
+*::before,
+*::after {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
 
-input[type="checkbox"] {
-    appearance: none;
+.container {
+    height: 0;
+    width: 0;
+    margin: auto;
     position: absolute;
-    display: block;
-    height: 250px;
-    width: 250px;
-    background-color: #d0d5f4;
-    transform: translate(-50%, -50%);
-    top: calc(50% - 50px);
-    left: 50%;
-    border-radius: 50%;
-    cursor: pointer;
-    transition: 0.3s;
-}
-
-input[type="checkbox"]:before {
-    position: absolute;
-    content: "";
-    height: 100px;
-    width: 25px;
-    background-color: #b4b9f1;
+    top: 0;
     bottom: 0;
-    margin: auto;
     left: 0;
     right: 0;
-
-    transition: 0.3s;
 }
 
-input[type="checkbox"]:after {
-    position: absolute;
-    content: "";
-    height: 30px;
-    width: 30px;
-    border: 25px solid #b4b9f1;
-    border-radius: 50%;
-    margin: auto;
-    left: 0;
-    right: 0;
-    bottom: 80px;
-
-    transition: 0.3s;
+.left {
+    height: 100px;
+    width: 100px;
+    background-color: #3e8fe1;
+    transform-origin: 0 0;
+    transform: rotate(90deg) skewX(-30deg) scaleY(0.864);
 }
 
-label {
-    position: absolute;
-    height: 110px;
-    width: 110px;
-    background-color: #08475e;
-    border-radius: 0 0 20px 20px;
-    transform: translate(-50%, -50%);
-    left: 50%;
-    top: calc(50% + 120px);
-    background: linear-gradient(#08475e 50%, #05303d 50%);
-    cursor: pointer;
+.right {
+    height: 100px;
+    width: 100px;
+    background-color: #2870bd;
+    transform-origin: 0 0;
+    transform: rotate(-30deg) skewX(-30deg) scaleY(0.864);
+    position: relative;
+    bottom: 100px;
 }
 
-label:before {
-    position: absolute;
-    content: "";
-    height: 50px;
-    width: 50px;
-    background-color: #05303d;
-    bottom: -20px;
-    margin: auto;
-    left: 0;
-    right: 0;
-    border-radius: 50%;
-}
+.top {
+    height: 100px;
+    width: 100px;
+    background-color: #80bdfe;
+    transform-origin: 0 0;
+    transform: rotate(210deg) skew(-30deg) scaleY(0.864);
+    position: relative;
+    bottom: 200px;
 
-label:after {
-    position: absolute;
-    content: "";
-    height: 500px;
-    width: 250px;
-    background-color: rgba(255, 255, 255, 0.3);
-    bottom: -50px;
-    left: 55px;
-}
-
-input[type="checkbox"]:checked {
-    background-color: #ffd845;
-}
-
-input[type="checkbox"]:checked::before {
-    background-color: #ff8e00;
-}
-
-input[type="checkbox"]:checked::after {
-    border: 25px solid #ff8e00;
 }
