--- a/style.css
+++ b/style.css
@@ -1,47 +1,73 @@
-*,
-*::before,
-*::after {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+body {
+    background-color: #305dcf;
 }
 
-.container {
-    height: 0;
-    width: 0;
-    margin: auto;
+.emoji {
     position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    flex-direction: column;
+    height: 300px;
+    width: 300px;
+    background-image: radial-gradient(#feca3e 58%, #ff8000 80%);
+    border-radius: 50%;
+    overflow: hidden;
+    box-shadow: 30px 30px 35px rgba(0, 0, 0, 0.25);
+}
+
+.eyes {
+    display: flex;
+}
+
+.eye {
+    border: solid #663d0f;
+    border-width: 0 16px 16px 0;
+    position: absolute;
+    padding: 18px;
 }
 
 .left {
-    height: 100px;
-    width: 100px;
-    background-color: #3e8fe1;
-    transform-origin: 0 0;
-    transform: rotate(90deg) skewX(-30deg) scaleY(0.864);
+    transform: rotate(-45deg);
+    top: 90px;
+    left: 25%;
 }
 
 .right {
-    height: 100px;
-    width: 100px;
-    background-color: #2870bd;
-    transform-origin: 0 0;
-    transform: rotate(-30deg) skewX(-30deg) scaleY(0.864);
-    position: relative;
-    bottom: 100px;
+    transform: rotate(135deg);
+    top: 90px;
+    right: 25%;
 }
 
-.top {
+.mouth {
     height: 100px;
-    width: 100px;
-    background-color: #80bdfe;
-    transform-origin: 0 0;
-    transform: rotate(210deg) skew(-30deg) scaleY(0.864);
-    position: relative;
-    bottom: 200px;
+    width: 220px;
+    background-color: #663d0f;
+    position: absolute;
+    margin: auto;
+    left: 0;
+    right: 0;
+    bottom: 25px;
+    overflow: hidden;
+    border-radius: 5px 5px 180px 180px;
+}
 
+.teeth {
+    height: 40px;
+    width: 220px;
+    background-color: #e9fdfa;
+    position: absolute;
+    bottom: 75px;
+    border-radius: 5px 5px 80px 80px;
+}
+
+.tongue {
+    height: 70px;
+    width: 105px;
+    position: absolute;
+    background-color: red;
+    border-radius: 50%;
+    transform: translate(50%);
+    top: 70px;
 }
