--- a/style.css
+++ b/style.css
@@ -1,74 +1,85 @@
-* {
-    padding: 0;
+*,
+* ::before,
+*::after {
     margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
 
 body {
-    background-color: #f8db94;
-}
-
-.container {
-    height: 600px;
-    width: 700px;
-    position: absolute;
-    transform: translate(-50%, -50%);
-    top: 50%;
-    left: 50%;
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background: #2e63b1;
 }
 
-.popsicle {
-    width: 180px;
-    height: 300px;
+.shield {
+    width: 400px;
+    height: 400px;
+    position: fixed;
+    background: transparent;
+    border: 40px solid #d13030;
+    border-radius: 50%;
+}
+
+.shield::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: transparent;
+    border: 40px solid #fff;
+    border-radius: 50%;
+}
+
+.shield::after {
+    content: "";
+    position: absolute;
+    width: 75%;
+    height: 75%;
+    background: transparent;
+    border: 40px solid #d13030;
+    border-radius: 50%;
+    top: 12.5%;
+    left: 12.5%;
+}
+
+.star {
+    width: 0;
+    height: 0;
     position: relative;
-    top: 45px;
-    border-radius: 90px 90px 20px 20px;
+    border-left: 100px solid transparent;
+    border-bottom: 70px solid #ffffff;
+    border-right: 100px solid transparent;
+    top: 38.5%;
+    left: 62px;
+    z-index: 1;
+    transform: rotate(35deg) scale(.75);
 }
 
-.popsicle::before {
+.star::before {
     position: absolute;
     content: "";
-    height: 180px;
-    width: 15px;
-    background-color: rgba(225, 225, 225, 0.2);
-    border-radius: 15px;
-    right: 20px;
-    top: 60px;
+    width: 0;
+    height: 0;
+    top: 3px;
+    left: -105px;
+    border-left: 100px solid transparent;
+    border-bottom: 70px solid #ffffff;
+    border-right: 100px solid transparent;
+    transform: rotate(-70deg);
 }
 
-.popsicle::after {
+.star::after {
     position: absolute;
     content: "";
-    height: 180px;
-    width: 30px;
-    background-color: #dba55b;
-    top: 300px;
-    margin: auto;
-    left: 0;
-    right: 0;
-    border-radius: 0 0 20px 20px;
-}
-
-.popsicle-1 {
-    background-image: repeating-linear-gradient(135deg,
-            #ff7eaf 0,
-            #ff7eaf 20px,
-            #ff0565 20px,
-            #ff0565 40px);
-}
-
-.popsicle-2 {
-    background-size: 60px 300px;
-    background-image: radial-gradient(circle at 30px 53px,
-            #521a01 80px,
-            #ffba00 81px);
-}
-
-.popsicle-3 {
-    background-color: #5e3a16;
-    background-image: radial-gradient(#c39a6b 4px,
-            transparent 4px);
-    background-size: 30px 30px;
+    width: 0;
+    height: 0;
+    top: -55px;
+    left: -67px;
+    transform: rotate(-35deg);
+    border-left: 30px solid transparent;
+    border-bottom: 80px solid #ffffff;
+    border-right: 30px solid transparent;
 }
