--- a/style.css
+++ b/style.css
@@ -1,85 +1,111 @@
 *,
-* ::before,
+*::before,
 *::after {
-    margin: 0;
     padding: 0;
+    margin: 0;
     box-sizing: border-box;
 }
 
 body {
+    background: navy;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background: #2e63b1;
+    overflow: hidden;
 }
 
-.shield {
+.container {
     width: 400px;
-    height: 400px;
+    aspect-ratio: 2/3;
+
     position: fixed;
-    background: transparent;
-    border: 40px solid #d13030;
-    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.shield::before {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background: transparent;
-    border: 40px solid #fff;
-    border-radius: 50%;
-}
-
-.shield::after {
-    content: "";
-    position: absolute;
-    width: 75%;
-    height: 75%;
-    background: transparent;
-    border: 40px solid #d13030;
-    border-radius: 50%;
-    top: 12.5%;
-    left: 12.5%;
-}
-
-.star {
-    width: 0;
-    height: 0;
+.ghost {
     position: relative;
-    border-left: 100px solid transparent;
-    border-bottom: 70px solid #ffffff;
-    border-right: 100px solid transparent;
-    top: 38.5%;
-    left: 62px;
-    z-index: 1;
-    transform: rotate(35deg) scale(.75);
+    background: white;
+    width: 280px;
+    height: 60%;
+    border-radius: 50% 50% 0 0;
+
+    display: flex;
+    justify-content: center;
+    animation: 3s float infinite ease;
 }
 
-.star::before {
-    position: absolute;
-    content: "";
-    width: 0;
-    height: 0;
-    top: 3px;
-    left: -105px;
-    border-left: 100px solid transparent;
-    border-bottom: 70px solid #ffffff;
-    border-right: 100px solid transparent;
-    transform: rotate(-70deg);
+@keyframes float {
+    50% {
+        transform: translateY(30px);
+    }
 }
 
-.star::after {
-    position: absolute;
+.face {
+    position: relative;
+    height: 140px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    transform: translateY(55%);
+    gap: 1rem;
+}
+
+.eyes {
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
+}
+
+.eyes>div {
+    width: 50px;
+    height: 80px;
+    background-color: #444;
+    background-image: radial-gradient(at 35% 35%, white 20%, transparent 20%),
+        radial-gradient(at 65% 45%, white 10%, transparent 10%);
+    border-radius: 50%;
+    border: 3px solid;
+}
+
+.smile {
+    background: pink;
+    width: 100px;
+    aspect-ratio: 1/3;
+    border-radius: 0 0 50% 50% / 0 0 100% 100%;
+    border: 3px solid;
+    box-shadow: inset 0 10px 0 8px #444;
+}
+
+.ghost::before {
     content: "";
-    width: 0;
-    height: 0;
-    top: -55px;
-    left: -67px;
-    transform: rotate(-35deg);
-    border-left: 30px solid transparent;
-    border-bottom: 80px solid #ffffff;
-    border-right: 30px solid transparent;
+    position: absolute;
+    width: 40px;
+    height: 130px;
+    background: white;
+    border-radius: 40px;
+    bottom: 0;
+    left: 0;
+    transform: translateY(55%);
+    box-shadow:
+        calc(40px * 1)1rem navy,
+        calc(40px * 2)-1rem white,
+        calc(40px * 3)2.5rem navy,
+        calc(40px * 4)1rem white,
+        calc(40px * 5)0rem navy,
+        calc(40px * 6)-1.5rem white;
+    animation: 4s move ease-in-out infinite;
+}
+
+@keyframes move {
+    50% {
+        box-shadow:
+            calc(40px * 1)2rem navy,
+            calc(40px * 2)1rem white,
+            calc(40px * 3)-.5rem navy,
+            calc(40px * 4)0rem white,
+            calc(40px * 5)1.5rem navy,
+            calc(40px * 6)-.5rem white;
+    }
 }
